--- a/src/govuk/components/_all.scss
+++ b/src/govuk/components/_all.scss
@@ -1,6 +1,4 @@
-@import "../settings/all";
-@import "../tools/all";
-@import "../helpers/all";
+@import "../base";
 
 @import "accordion/index";
 @import "back-link/index";
