--- a/src/govuk/components/footer/_footer.scss
+++ b/src/govuk/components/footer/_footer.scss
@@ -1,5 +1,2 @@
-@import "../../settings/all";
-@import "../../tools/all";
-@import "../../helpers/all";
-
+@import "../../base";
 @import "./index";
