Adjust styles for labels and hint text

--- a/src/govuk/components/date-input/_date-input.scss
+++ b/src/govuk/components/date-input/_date-input.scss
@@ -22,6 +22,7 @@
 
   .govuk-date-input__label {
     display: block;
+    font-weight: $govuk-font-weight-regular;
   }
 
   .govuk-date-input__input {
