--- a/src/govuk/components/radios/_radios.scss
+++ b/src/govuk/components/radios/_radios.scss
@@ -74,6 +74,7 @@
     display: inline-block;
     margin-bottom: 0;
     padding: 8px $govuk-radios-label-padding-left-right govuk-spacing(1);
+    font-weight: $govuk-font-weight-regular;
     cursor: pointer;
     // remove 300ms pause on mobile
     touch-action: manipulation;
