--- a/src/govuk/components/checkboxes/_checkboxes.scss
+++ b/src/govuk/components/checkboxes/_checkboxes.scss
@@ -71,6 +71,7 @@
     display: inline-block;
     margin-bottom: 0;
     padding: 8px $govuk-checkboxes-label-padding-left-right govuk-spacing(1);
+    font-weight: $govuk-font-weight-regular;
     cursor: pointer;
     // remove 300ms pause on mobile
     touch-action: manipulation;
