Import dependent components without importing base
This avoids importing the base layers again when components import other components as dependencies.

We need to explicitly import `accordion/index` file, rather than just importing `accordion`, as index file support has only been in LibSass since 3.6.0 and Ruby Sass since 3.6.0[1], and we support 3.3.0 and 1.0.0 respectively.

[1]: https://sass-lang.com/documentation/at-rules/import#index-files

--- a/src/govuk/components/character-count/_index.scss
+++ b/src/govuk/components/character-count/_index.scss
@@ -1,7 +1,7 @@
-@import "../error-message/error-message";
-@import "../hint/hint";
-@import "../label/label";
-@import "../textarea/textarea";
+@import "../error-message/index";
+@import "../hint/index";
+@import "../label/index";
+@import "../textarea/index";
 
 @include govuk-exports("govuk/component/character-count") {
   .govuk-character-count {
