--- a/src/govuk/components/checkboxes/_index.scss
+++ b/src/govuk/components/checkboxes/_index.scss
@@ -1,7 +1,7 @@
-@import "../error-message/error-message";
-@import "../fieldset/fieldset";
-@import "../hint/hint";
-@import "../label/label";
+@import "../error-message/index";
+@import "../fieldset/index";
+@import "../hint/index";
+@import "../label/index";
 
 @include govuk-exports("govuk/component/checkboxes") {
 
