--- a/src/govuk/components/file-upload/_index.scss
+++ b/src/govuk/components/file-upload/_index.scss
@@ -1,6 +1,6 @@
-@import "../error-message/error-message";
-@import "../hint/hint";
-@import "../label/label";
+@import "../error-message/index";
+@import "../hint/index";
+@import "../label/index";
 
 @include govuk-exports("govuk/component/file-upload") {
   $component-padding: govuk-spacing(1);
