--- a/src/govuk/core/_lists.scss
+++ b/src/govuk/core/_lists.scss
@@ -51,7 +51,11 @@
   }
 
   %govuk-list--spaced > li {
-    margin-bottom: govuk-spacing(3);
+    margin-bottom: govuk-spacing(2);
+
+    @include govuk-media-query($from: tablet) {
+      margin-bottom: govuk-spacing(3);
+    }
 
     &:last-child {
       margin-bottom: govuk-spacing(0);
