--- a/src/govuk/components/input/_index.scss
+++ b/src/govuk/components/input/_index.scss
@@ -91,4 +91,56 @@
     max-width: 5.4ex;
   }
 
+  .govuk-input__wrapper {
+    display: flex;
+    display: -ms-flexbox; // sass-lint:disable-line no-duplicate-properties
+
+    .govuk-input {
+      display: inline-block;
+      flex: 0 1 auto;
+    }
+
+    .govuk-input:focus {
+      z-index: 1; // increase z-index on focus so it appears over the suffix
+    }
+  }
+
+  .govuk-input__prefix,
+  .govuk-input__suffix {
+    @include govuk-font($size: 19);
+
+    box-sizing: border-box;
+    display: inline-block;
+    width: auto;
+
+    min-width: 40px;
+    @if $govuk-typography-use-rem {
+      min-width: govuk-px-to-rem(40px);
+    }
+
+    height: 40px;
+    @if $govuk-typography-use-rem {
+      height: govuk-px-to-rem(40px);
+    }
+    margin-top: 0;
+
+    padding: govuk-spacing(1);
+
+    border: $govuk-border-width-form-element solid $govuk-input-border-colour;
+    background-color: govuk-colour("light-grey", $legacy: "grey-3");
+
+    text-align: center;
+    white-space: nowrap;
+    cursor: default; // emphasise non-editable status of prefixes and suffixes
+
+  }
+
+  .govuk-input__prefix {
+    border-right: 0;
+  }
+
+  .govuk-input__suffix {
+    border-left: 0;
+  }
+
 }
