Enhance wrapping behaviour for collapseOnMobile

--- a/src/govuk/components/breadcrumbs/_index.scss
+++ b/src/govuk/components/breadcrumbs/_index.scss
@@ -117,6 +117,15 @@
         &:last-child {
           display: inline-block;
         }
+
+        &:before {
+          top: 6px;
+          margin: 0;
+        }
+      }
+
+      .govuk-breadcrumbs__list {
+        display: flex;
       }
     }
   }
