Fix missing hover states on error summary and header

--- a/src/govuk/components/error-summary/_error-summary.scss
+++ b/src/govuk/components/error-summary/_error-summary.scss
@@ -49,6 +49,7 @@
 
     &:hover {
       @include govuk-hovered-text;
+      box-shadow: 0 -2px transparent, 0 4px $govuk-error-colour;
     }
 
     // Override default link styling to use error colour
