Make hover underline thinner for smaller font sizes

--- a/app/views/examples/typography/index.njk
+++ b/app/views/examples/typography/index.njk
@@ -242,6 +242,7 @@
 
         <p class="govuk-body-m">Private car parking management companies that give out parking tickets or trespass charge notices can only request information from <abbr title="Driver and Vehicle Licensing Agency">DVLA</abbr> if they’re members of the <a rel="external" href="http://www.britishparking.co.uk" class="govuk-link">British Parking Association</a> or the <a rel="external" href="http://www.theipc.info" class="govuk-link">International Parking Community.</a></p>
 
+        <p class="govuk-body-s">Private car parking management companies that give out parking tickets or trespass charge notices can only request information from <abbr title="Driver and Vehicle Licensing Agency">DVLA</abbr> if they’re members of the <a rel="external" href="http://www.britishparking.co.uk" class="govuk-link">British Parking Association</a> or the <a rel="external" href="http://www.theipc.info" class="govuk-link">International Parking Community.</a></p>
 
         <h3 class="govuk-heading-s">How to make a request</h3>
         <p class="govuk-body-m">Fill in a form and apply by post. The form you need to use depends on who is making the request and why.</p>
