Add default value of / for Header component's serviceUrl param
Prior to this if you passed serviceName to the Header component but omitted serviceUrl, it would be rendered with an empty href.

--- a/src/govuk/components/header/template.njk
+++ b/src/govuk/components/header/template.njk
@@ -55,7 +55,7 @@
     {% if params.serviceName or params.navigation  %}
     <div class="govuk-header__content">
     {% if params.serviceName %}
-    <a href="{{ params.serviceUrl }}" class="govuk-header__link govuk-header__link--service-name">
+    <a href="{{ params.serviceUrl | default('/') }}" class="govuk-header__link govuk-header__link--service-name">
       {{ params.serviceName }}
     </a>
     {% endif %}
