--- a/govuk/components/footer/template.njk
+++ b/govuk/components/footer/template.njk
@@ -58,7 +58,7 @@
           focusable="false"
           class="govuk-footer__licence-logo"
           xmlns="http://www.w3.org/2000/svg"
-          viewbox="0 0 483.2 195.7"
+          viewBox="0 0 483.2 195.7"
           height="17"
           width="41"
         >
