--- a/src/govuk/objects/_grid.scss
+++ b/src/govuk/objects/_grid.scss
@@ -10,7 +10,7 @@
 
   @each $width in map-keys($govuk-grid-widths) {
     .govuk-grid-column-#{$width} {
-      @include govuk-grid-column($width)
+      @include govuk-grid-column($width);
     }
   }
 
@@ -19,7 +19,7 @@
   // them in the outputted CSS
   @each $width in map-keys($govuk-grid-widths) {
     .govuk-grid-column-#{$width}-from-desktop {
-      @include govuk-grid-column($width, $at: desktop)
+      @include govuk-grid-column($width, $at: desktop);
     }
   }
 }
