Turn on declaration-colon-newline-after stylelint rule
The configuration provided by stylelint-config-standard is:
https://stylelint.io/user-guide/rules/declaration-colon-newline-after#always-multi-line

--- a/src/govuk/components/radios/_index.scss
+++ b/src/govuk/components/radios/_index.scss
@@ -318,8 +318,9 @@
     // and another that then applies the hover state [2].
     .govuk-radios__item:hover .govuk-radios__input:focus + .govuk-radios__label::before {
       // sass-lint:disable indentation
-      box-shadow: 0 0 0 $govuk-radios-focus-width $govuk-focus-colour, // 1
-                  0 0 0 $govuk-hover-width        $govuk-hover-colour; // 2
+      box-shadow:
+        0 0 0 $govuk-radios-focus-width $govuk-focus-colour, // 1
+        0 0 0 $govuk-hover-width        $govuk-hover-colour; // 2
     }
 
     // For devices that explicitly don't support hover, don't provide a hover
