Turn on function-comma-newline-after stylelint rule
stylelint-config-standard uses
https://stylelint.io/user-guide/rules/function-comma-newline-after#always-multi-line
which requires all arguments in a multi-line function call to be on
individual lines.

Applying this conflicts with the sass-lint indention rule so this has
been disabled in the places this has been applied.

--- a/src/govuk/settings/_colours-palette.scss
+++ b/src/govuk/settings/_colours-palette.scss
@@ -13,11 +13,15 @@
 /// @type Boolean
 /// @access public
 
-$govuk-use-legacy-palette: if((
+$govuk-use-legacy-palette: if(
+  (
     $govuk-compatibility-govukfrontendtoolkit or
     $govuk-compatibility-govuktemplate or
     $govuk-compatibility-govukelements
-  ), true, false) !default;
+  ),
+  true, // sass-lint:disable-line indentation
+  false // sass-lint:disable-line indentation
+) !default;
 
 /// Modern colour palette
 ///
