--- a/src/govuk/settings/_typography-responsive.scss
+++ b/src/govuk/settings/_typography-responsive.scss
@@ -14,11 +14,15 @@
 /// @type Boolean
 /// @access public
 
-$govuk-typography-use-rem: if((
+$govuk-typography-use-rem: if(
+  (
     $govuk-compatibility-govukfrontendtoolkit or
     $govuk-compatibility-govuktemplate or
     $govuk-compatibility-govukelements
-  ), false, true) !default;
+  ),
+  false, // sass-lint:disable-line indentation
+  true // sass-lint:disable-line indentation
+) !default;
 
 /// Root font size
 ///
