Turn on function-parentheses-newline-inside stylelint rule
stylelint-config-standard applies this always for multi-line rules:
https://stylelint.io/user-guide/rules/function-parentheses-newline-inside#always-multi-line

--- a/src/govuk/helpers/_typography.scss
+++ b/src/govuk/helpers/_typography.scss
@@ -127,7 +127,8 @@
     $font-size-rem: govuk-px-to-rem($font-size);
 
     $line-height: _govuk-line-height(
-      $line-height: if($override-line-height,
+      $line-height: if(
+        $override-line-height,
         $override-line-height,
         map-get($breakpoint-map, "line-height")
       ),
