--- a/src/govuk/settings/_typography-font.scss
+++ b/src/govuk/settings/_typography-font.scss
@@ -33,7 +33,8 @@ $govuk-use-legacy-font: if(
 /// @type List
 /// @access public
 
-$govuk-font-family: if($govuk-use-legacy-font,
+$govuk-font-family: if(
+  $govuk-use-legacy-font,
   $govuk-font-family-nta,
   $govuk-font-family-gds-transport
 ) !default;
@@ -43,7 +44,8 @@ $govuk-font-family: if($govuk-use-legacy-font,
 /// @type List
 /// @access public
 
-$govuk-font-family-tabular: if($govuk-use-legacy-font,
+$govuk-font-family-tabular: if(
+  $govuk-use-legacy-font,
   $govuk-font-family-nta-tabular,
   false
 ) !default;
