Add spellcheck option to input
The spellcheck attribute can currently be set through the attributes field for the input component.

This commit makes the spellcheck option more explicit and means it can be set directly without using the attribute field.

--- a/src/govuk/components/input/template.njk
+++ b/src/govuk/components/input/template.njk
@@ -38,6 +38,7 @@
   }) | indent(2) | trim }}
 {% endif %}
   <input class="govuk-input {%- if params.classes %} {{ params.classes }}{% endif %} {%- if params.errorMessage %} govuk-input--error{% endif %}" id="{{ params.id }}" name="{{ params.name }}" type="{{ params.type | default('text') }}"
+  {%- if (params.spellcheck === false) or (params.spellcheck === true) %} spellcheck="{{ params.spellcheck }}"{% endif %}
   {%- if params.value %} value="{{ params.value}}"{% endif %}
   {%- if describedBy %} aria-describedby="{{ describedBy }}"{% endif %}
   {%- if params.autocomplete %} autocomplete="{{ params.autocomplete}}"{% endif %}
