Turn on value-list-max-empty-lines stylelint rule
stylelint-config-standard allows 0 empty lines in a value list [1].
Since these violations appear to be added to break the content up into
logical groupings I've added a disable rather than remove the new lines.

[1]: https://github.com/stylelint/stylelint-config-standard/blob/00d8b36bab00fb20426ca226338fccc2ee34f1f0/index.js#L108

--- a/src/govuk/settings/_colours-palette.scss
+++ b/src/govuk/settings/_colours-palette.scss
@@ -1,5 +1,8 @@
 @import "compatibility";
 
+// allow empty lines in lists in this file to allow grouping
+// stylelint-disable value-list-max-empty-lines
+
 ////
 /// @group settings/colours
 ////
