Turn on indendation stylelint rule
I've disabled the stylelint rule in device-pixels and spacing files as
stylelint and sass-lint conflict over what they believe the indentation
should be.

--- a/src/govuk/helpers/_spacing.scss
+++ b/src/govuk/helpers/_spacing.scss
@@ -2,6 +2,9 @@
 /// @group helpers/spacing
 ////
 
+// stylelint and sass-lint have a disagreement over indentation in this file
+// stylelint-disable indentation
+
 /// Single point spacing
 ///
 /// Returns measurement corresponding to the spacing point requested.
