--- a/src/govuk/helpers/_device-pixels.scss
+++ b/src/govuk/helpers/_device-pixels.scss
@@ -28,6 +28,8 @@
 /// @access public
 
 @mixin govuk-device-pixel-ratio($ratio: 2) {
+  // stylelint and sass-lint have a disagreement over indentation in this file
+  // stylelint-disable indentation
   @media only screen and (-webkit-min-device-pixel-ratio: $ratio),
     only screen and (-o-min-device-pixel-ratio: #{($ratio * 10)} / 10),
     only screen and (min-resolution: #{($ratio * 96)}dpi),
