--- a/src/govuk/components/skip-link/_index.scss
+++ b/src/govuk/components/skip-link/_index.scss
@@ -21,6 +21,7 @@
 
     &:focus {
       outline: $govuk-focus-width solid $govuk-focus-colour;
+      outline-offset: 0;
       background-color: $govuk-focus-colour;
 
       // Undo unwanted changes when global styles are enabled
