--- a/package/govuk/components/header/template.njk
+++ b/package/govuk/components/header/template.njk
@@ -21,7 +21,7 @@
             focusable="false"
             class="govuk-header__logotype-crown"
             xmlns="http://www.w3.org/2000/svg"
-            viewbox="0 0 132 97"
+            viewBox="0 0 132 97"
             height="30"
             width="36"
           >
