--- a/govuk/settings/_measurements.scss
+++ b/govuk/settings/_measurements.scss
@@ -81,8 +81,11 @@ $govuk-border-width-form-element: 2px !default;
 ///
 /// @type Number
 /// @access public
+/// @deprecated Use $govuk-border-width-form-element instead. There should be no
+///   difference in thickness for inputs in the error state, in order to
+///   maintain a distinct focus state.
 
-$govuk-border-width-form-element-error: 4px !default;
+$govuk-border-width-form-element-error: 2px !default;
 
 /// Form group border width when in error state
 ///
