--- a/src/govuk/helpers/_spacing.scss
+++ b/src/govuk/helpers/_spacing.scss
@@ -2,8 +2,7 @@
 /// @group helpers/spacing
 ////
 
-// stylelint-disable indentation -- stylelint and sass-lint have a
-// disagreement over indentation in this file
+// stylelint-disable indentation
 
 /// Single point spacing
 ///
