--- a/src/govuk/helpers/_typography.scss
+++ b/src/govuk/helpers/_typography.scss
@@ -143,9 +143,9 @@
     $line-height: $line-height if($important, !important, null);
 
     @if $breakpoint == null {
-      font-size: $font-size; // sass-lint:disable no-duplicate-properties
+      font-size: $font-size;
       @if $govuk-typography-use-rem {
-        font-size: $font-size-rem; // sass-lint:disable no-duplicate-properties
+        font-size: $font-size-rem;
       }
       line-height: $line-height;
     } @else if $breakpoint == "print" {
@@ -155,9 +155,9 @@
       }
     } @else {
       @include govuk-media-query($from: $breakpoint) {
-        font-size: $font-size; // sass-lint:disable no-duplicate-properties
+        font-size: $font-size;
         @if $govuk-typography-use-rem {
-          font-size: $font-size-rem; // sass-lint:disable no-duplicate-properties
+          font-size: $font-size-rem;
         }
         line-height: $line-height;
       }
