Turn on declaration-no-important stylelint rule
This rule was accidentally missed in the initial config for
stylelint-config-gds. This applies disabling of this rule in the
situations where we make an exception and want important rules.

--- a/src/govuk/overrides/_display.scss
+++ b/src/govuk/overrides/_display.scss
@@ -4,6 +4,7 @@
 
 @import "../base";
 
+// stylelint-disable declaration-no-important
 @include govuk-exports("govuk/overrides/display") {
   .govuk-\!-display-inline {
     display: inline !important;
