Improve rendering on IE8
IE8 doesn't support flex so the prefix, suffix and input don't appear
aligned.

Don't remove prefix/suffix borders on IE8 to make the elements look
less 'broken'.

There is still a gap between the elements on IE8 which is acceptable
as we only functionally support IE8.

--- a/src/govuk/components/input/_index.scss
+++ b/src/govuk/components/input/_index.scss
@@ -159,7 +159,9 @@
       border-bottom: 0;
     }
     @include govuk-media-query($from: mobile) {
-      border-right: 0;
+      @include govuk-not-ie8 {
+        border-right: 0;
+      }
     }
   }
 
@@ -168,7 +170,9 @@
       border-top: 0;
     }
     @include govuk-media-query($from: mobile) {
-      border-left: 0;
+      @include govuk-not-ie8 {
+        border-left: 0;
+      }
     }
   }
 }
